updated footer - removed instagram and added facebook links instead. htaccess file was also added to remove .html from url's

--- a/contact.html
+++ b/contact.html
@@ -160,7 +160,7 @@
 
       <h6>SOCIAL</h6>
       <a target="_blank" href="http://www.twitter.com/weeryzer">Twitter</a>
-      <a target="_blank" href="http://www.instagram.com/rydncn">Instagram</a>
+      <a target="_blank" href="https://www.facebook.com/RyDncn/">Facebook</a>
 
     </div>
 
