--- a/csc.html
+++ b/csc.html
@@ -71,7 +71,7 @@
 
     <div class="project-top-info">
 
-          <h2>City and Shire Contracts</h2>
+          <h2>City and Shire</h2>
           <h4>BRANDING &bull; WEB &bull; WIP</h4>
           <hr>
           <p>After finishing third year in May, I wanted to keep designing stuff over Summer until we went back. I played around with a few things here and there and then decided on creating a logo for a made up local company. The project will then move into other areas. My idea was to use the two C's in the company name to create the S which is in the company name too.</p>
@@ -132,7 +132,7 @@
 
       <h6>SOCIAL</h6>
       <a target="_blank" href="http://www.twitter.com/weeryzer">Twitter</a>
-      <a target="_blank" href="http://www.instagram.com/rydncn">Instagram</a>
+      <a target="_blank" href="https://www.facebook.com/RyDncn/">Facebook</a>
 
     </div>
 
