--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="social">
         <span>SOCIAL</span>
         <a target='_blank' href="http://www.twitter.com/weeryzer">Twitter</a>
-        <a target='_blank' href="http://www.instagram.com/rydncn">Instagram</a>
+        <a target='_blank' href="https://www.facebook.com/RyDncn/">Facebook</a>
       </div>
       </div>
       <div class="col-md-12">
@@ -358,7 +358,7 @@
 
       <h6>SOCIAL</h6>
       <a target="_blank" href="http://www.twitter.com/weeryzer">Twitter</a>
-      <a target="_blank" href="http://www.instagram.com/rydncn">Instagram</a>
+      <a target="_blank" href="https://www.facebook.com/RyDncn/">Facebook</a>
 
     </div>
 
