updated skills in about

--- a/about.html
+++ b/about.html
@@ -129,7 +129,7 @@
 
           <h4>SKILLS</h4>
           <hr>
-          <p>I am confident in using Adobe Photoshop, Illustrator, InDesign and Microsoft Office. Alongside this, I enjoy designing and coding websites with HTML, CSS and JS.</p>
+          <p>I am confident in using Adobe Photoshop, Illustrator, InDesign and Microsoft Office. Alongside this, I enjoy designing and coding websites with HTML, CSS and JS. I have basic knowledge of SASS and currently using cmder with Github for version control.</p>
 
           <p>Premiere, After Effects, 3DS Max and Cinema 4D are other programs I have knowledge in through recent work experience and university.</p>
 
