added form to contact page

--- a/contact.html
+++ b/contact.html
@@ -75,6 +75,70 @@
 
   <div class="row">
 
+    <div class="container">
+
+      <div class="contact">
+
+        <form autocomplete="on" action="https://formspree.io/rydncn@gmail.com"
+      method="POST">
+
+      <div class="row">
+
+        <div class="col-md-4">
+
+          <label>FIRST NAME*</label>
+          <input type="text" name="first name" placeholder="Johnny" required>
+          
+        </div>
+
+        <div class="col-md-4">
+
+          <label>LAST NAME*</label>
+          <input type="text" name="last name" placeholder="Davidson" required>
+          
+
+        </div>
+
+        <div class="col-md-4">
+
+          <label>EMAIL*</label>
+          <input type="email" name="_replyto" placeholder="jdavidson@gmail.com" required>
+
+        </div>
+
+      </div>
+
+      <div class="row">
+
+        <div class="col-md-12">
+
+          <label>MESSAGE*</label>
+          <textarea name="message" placeholder="Hi, Ryan..." required></textarea>
+
+        </div>
+
+      </div>
+
+      <div class="row">
+
+        <div class="col-md-12">
+
+          <input type="submit" value="SEND">
+
+        </div>
+
+      </div>
+
+        </form>
+
+      </div>
+
+    </div>
+
+  </div>
+
+  <div class="row">
+
       <div class="col-md-4">
 
         <div class="contact">
@@ -130,7 +194,6 @@
       </div>
 
   </div>
-
 
   	</div>
 </div>
