fixed links to open on another tab and changed email address

--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
 
       <div class="contact">
 
-        <form autocomplete="on" action="https://formspree.io/rydncn@gmail.com"
+        <form autocomplete="on" action="https://formspree.io/contact@ryan-duncan.co.uk"
       method="POST">
 
       <div class="row">
@@ -149,7 +149,7 @@
           <hr>
           <p>I'm available for freelance work. Please email me if you would like to get in touch!</p> 
 
-           <a href="mailto:rydncn@gmail.com?Subject=Hi Ryan, I would like to chat!"><button>SEND AN EMAIL</button></a>
+           <a href="mailto:contact@ryan-duncan.co.uk?Subject=Hi Ryan, I would like to chat!"><button>SEND AN EMAIL</button></a>
 
           </div>
 
@@ -167,7 +167,7 @@
           <hr>
           <p>If you would prefer, send me a tweet. I am usually on Twitter most of the time.</p> 
 
-           <a href="https://twitter.com/intent/tweet?=text=Hi, @WeeRyzer."><button>TWEET ME</button></a>
+           <a target="_blank" href="https://twitter.com/intent/tweet?=text=Hi, @WeeRyzer."><button>TWEET ME</button></a>
 
           </div>
 
@@ -185,7 +185,7 @@
           <hr>
           <p>I also have a Facebook page if you would like to contact me through that instead.</p> 
 
-           <a href="https://www.facebook.com/RyanDuncanGD/"><button>MESSAGE ON FB</button></a>
+           <a target="_blank" href="https://www.facebook.com/RyDncn/"><button>MESSAGE ON FB</button></a>
 
           </div>
 
