removed radius on input borders and inner shadow on ios

--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,7 @@
         <div class="col-md-12">
 
           <label>MESSAGE*</label>
-          <textarea name="message" placeholder="Hi, Ryan..." required></textarea>
+          <textarea name="message" placeholder="Hi Ryan..." required></textarea>
 
         </div>
 
